# linkr

./: .gitignore  README.md  pyproject.toml
.github/workflows/: checks.yml
src/linkr/: __init__.py  app.py  di.py  exceptions.py  models.py  serializer.py
src/linkr/middleware/: __init__.py  base.py  gzip.py
src/linkr/transports/: __init__.py  mock.py  rmq.py
tests/: conftest.py  test_app.py  test_di.py  test_models.py  test_serializer.py  utils.py
tests/integration/: test_rmq.py
tests/middlewares/: test_gzip.py
tests/transports/: test_mock_transport.py
