[project]
name = "linkr"
version = "0.1.0"
description = "Async RPC framework with middleware support"
readme = "README.md"
requires-python = ">=3.11,<4"
license = { text = "MIT" }
keywords = ["rpc", "async", "framework", "rabbitmq", "amqp", "middleware"]
authors = [
    { name = "Roman Koshel", email = "roma.koshel@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/levsh/linkr"
Repository = "https://github.com/levsh/linkr"
BugTracker = "https://github.com/levsh/linkr/issues"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = ">=2.0"
rmqaio = ">=0.18.0"

[tool.poetry.group.test.dependencies]
docker = "*"
mypy = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkr"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_any_generics = true
disallow_subclassing_any = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require external services like Docker",
]
